# aze-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml
cli/: Cargo.toml  Config.toml  miden-client.toml
cli/src/: action.rs  commit_hand.rs  connect.rs  consume_notes.rs  init.rs  main.rs  peek_hand.rs  receive_cards.rs  register.rs  see_hands.rs  stats.rs
cli/src/accounts/: mod.rs
cli/src/actions/: mod.rs
cli/src/utils/: accounts.rs  mod.rs
cli/tests/e2e/: test_basic_e2e.rs  utils.rs
lib/: Cargo.toml  build.rs
lib/asm/miden/: account.masm
lib/asm/tx_scripts/: auth_consume_note.masm  auth_send_note.masm
lib/contracts/core/: game.masm  player.masm
lib/contracts/notes/game/: bet.masm  call.masm  check.masm  deal.masm  fold.masm  genkey.masm  inter_unmask.masm  raise.masm  remask.masm  send_community_cards.masm  send_unmasked_cards.masm  set_cards.masm  set_community_cards.masm  set_hand.masm  shuffle.masm  unmask.masm
lib/src/: lib.rs
lib/src/accounts/: mod.rs
lib/src/broadcast/: mod.rs
lib/src/client/: mod.rs
lib/src/constants/: mod.rs
lib/src/executor/: mod.rs
lib/src/gamestate/: mod.rs
lib/src/notes/: mod.rs
lib/src/storage/: mod.rs
lib/src/utils/: mod.rs
types/: Cargo.toml
types/src/: accounts.rs  actions.rs  lib.rs
