[workspace]
resolver = "2"
members = [ "cli", "lib", "types"]

[patch.crates-io]
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch="next", features= ["concurrent","testing"] }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", default-features = false, rev="893887a" }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", default-features = false, rev="893887a" }