[package]
name = "aze-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aze-enc = { git = "https://github.com/RizeLabs/elgamal-ecgfp5.git", branch = "main" }
aze-lib = { path = "../lib" }
aze-types = { path = "../types" }
clap = { version = "4.5.4", features = ["derive"] }
cronjob = "0.4.17"
dialoguer = "0.11"
ecgfp5 = { git = "https://github.com/RizeLabs/elgamal-ecgfp5.git", branch = "main" }
figment = { version = "0.10", features = ["toml"] }
miden-client = { version = "0.3.0", features= ["concurrent","testing"] }
miden-lib = { version = "*", features= ["concurrent","testing"] }
miden-objects = { version = "*", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
tokio-cron-scheduler = "0.10.2"

