[package]
name = "aze-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aze-cli"
path = "src/main.rs"

[dependencies]
aze-enc = { git = "https://github.com/RizeLabs/elgamal-ecgfp5.git", branch = "main" }
aze-lib = { path = "../lib" }
aze-types = { path = "../types" }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11"
ecgfp5 = { git = "https://github.com/RizeLabs/elgamal-ecgfp5.git", branch = "main" }
figment = { version = "0.10", features = ["toml"] }
miden-client = { version = "0.3.0", features= ["concurrent","testing"] }
miden-lib = { version = "0.3.0", features= ["concurrent","testing"] }
miden-objects = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
tokio-tungstenite = "0.16"
futures-util = "0.3"
tokio-cron-scheduler = "0.10.2"
url = "2.2"
ansi_term = "0.12.1"
toml = "0.8.14"
rand = "0.8.5"