[package]
name = "aze-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
figment = { version = "0.10", features = ["toml", "env"] }
rand = { version = "0.8.5" }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
# miden-tx = { version = "0.2.0", default-features = false }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.3", default-features = false }
# miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features = ["serde"]   }
miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", features= ["concurrent","testing"] }
miden-objects = { version = "0.2", default-features = false }
aze-types = { path = "../types" }

[dev-dependencies]

[build-dependencies]
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }