[package]
name = "aze-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
figment = { version = "0.10", features = ["toml", "env"] }
rand = { version = "0.8.5" }
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch="dominik_spply_account_delta_storage_maps", features= ["concurrent","testing"] }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch="dominik_spply_account_delta_storage_maps", default-features = false }
miden-client = { version = "0.3.0", features= ["concurrent","testing"] }
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch="dominik_spply_account_delta_storage_maps", default-features = false }
aze-types = { path = "../types" }

[dev-dependencies]

[build-dependencies]
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }