[package]
name = "aze-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
figment = { version = "0.10", features = ["toml", "env"] }
rand = { version = "0.8.5" }
miden-lib = { version = "0.3.0", features= ["concurrent","testing"] }
miden-tx = { version = "0.3.0", default-features = false }
miden-client = { version = "0.3.0", features= ["concurrent","testing"] }
miden-objects = { version = "0.3.0", default-features = false }
aze-types = { path = "../types" }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
get_if_addrs = "0.5.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2"

[dev-dependencies]

[build-dependencies]
miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }